Fix spacing of title

--- a/orchard/src/Styles/HeroBanner.scss
+++ b/orchard/src/Styles/HeroBanner.scss
@@ -38,7 +38,7 @@
         font-size: 20px;
         font-weight: 300;
         position: relative;
-        margin-bottom: $spacing-m;
+        margin-bottom: calc(#{$spacing-m} - 1rem);;
       }
 
       h3.title:before {
